<resources>
    <string name="app_name">JobComb</string>
    <string name="usuario">Usuario</string>
    <string name="alterado">alterado</string>
    <string name="salvo">Salvo</string>
    <string name="atualizando">Atualizando...</string>
    <string name="deletar">Deletar</string>
    <string name="ir_para_git">Ir pro GitHub</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="cidade">Cidade</string>
    <string name="pais">País</string>
    <string name="usuario_git">Usuario Git</string>
    <string name="usuario_linkedin">Usuario Linkedin</string>
    <string name="sexo">Sexo</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="data_de_cadastro">Data de Cadastro</string>
    <string name="senha">Senha</string>
    <string name="desafios">DESAFIOS</string>
    <string name="usuario_git_">Usuário Git:</string>
    <string name="bio">BIO:</string>
    <string name="atividades_github">Atividades GitHub</string>
    <string name="reposit_rios_p_blicos">Repositórios Públicos:</string>
    <string name="gists_p_blicos">Gists Públicos:</string>
    <string name="seguidores">Seguidores:</string>
    <string name="seguindo">Seguindo:</string>
    <string name="ver_reposit_rios">Ver Repositórios</string>
    <string name="perfil_github">Perfil GitHub:</string>
    <string name="disconectado">Disconectado!</string>
    <string name="nome_de_usu_rio">Nome de Usuário</string>
    <string name="logar">Logar</string>
    <string name="primeiro_acesso">Primeiro Acesso</string>
    <string name="bem_vindo_jobcomb">Bem-vindo à JobComb</string>
    <string name="a_maneira_perfeita_de_ganhar_experi_ncia">A MANEIRA PERFEITA DE GANHAR EXPERIÊNCIA</string>
    <string name="inscreva_se">Inscreva-se</string>
    <string name="compartilhe">Compartilhe</string>
</resources>
