
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:layout_margin="16dp"
    android:orientation="vertical">

        <EditText
            android:hint="@string/nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/formulario_nome"/>

        <EditText
            android:hint="@string/sobrenome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/formulario_sobrenome"/>

        <EditText
            android:hint="@string/cidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/formulario_cidade" />

        <EditText
            android:hint="@string/pais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/formulario_pais"/>

        <EditText
            android:hint="@string/usuario_git"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/formulario_nome_git"/>

        <EditText
            android:hint="@string/usuario_linkedin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/formulario_nome_linkedin"/>

        <EditText
            android:hint="Site"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/formulario_site"/>

        <EditText
            android:hint="@string/sexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/formulario_sexo"/>

        <EditText
            android:hint="@string/data_de_nascimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/formulario_data_nascimento"
            android:inputType="date"/>

        <EditText
            android:hint="@string/data_de_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/formulario_data_cadastro"
            android:inputType="date"/>

        <EditText
            android:hint="@string/senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/formulario_senha"
            android:inputType="numberPassword"/>

    </LinearLayout>

</ScrollView>
