<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:clickable="true"
    android:elevation="60dp"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="580dp"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/user_image_header"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/jesse"/>

        <TextView
            android:id="@+id/tvNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/user_image_header"
            android:text="name"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desafios"
            android:onClick="vaiParaDesafios"
            android:layout_alignParentRight="true"/>

        <TextView
            android:id="@+id/tvCidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvNome"
            android:layout_marginBottom="4dp"
            android:layout_toRightOf="@id/user_image_header"
            android:text="location"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tvCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvCidade"
            android:layout_marginBottom="4dp"
            android:layout_toRightOf="@id/user_image_header"
            android:text="company"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="login"
            android:textSize="16sp"
            android:textStyle="italic"
            android:layout_below="@+id/tvCompany"
            android:layout_alignStart="@+id/disconnected" />

        <TextView
            android:id="@+id/usuarioGitLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="@string/usuario_git_"
            android:textSize="16sp"
            android:layout_below="@+id/tvCompany"
            android:layout_toEndOf="@+id/tvLabelGitProfileLink" />

        <TextView
            android:id="@+id/tvLabelBio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLogin"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/bio"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvBio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLabelBio"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="bio"
            android:textSize="16sp"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/tvLabelAtividadesGit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvBio"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:text="@string/atividades_github"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvLabelPublicRepos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLabelAtividadesGit"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:text="@string/reposit_rios_p_blicos"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvPublicReposNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/tvLabelAtividadesGit"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="8dp"
            android:text="publicRepos"
            android:textSize="14sp"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/tvLabelPublicGists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLabelPublicRepos"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:text="@string/gists_p_blicos"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvPublicGistsNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/tvPublicReposNumber"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="8dp"
            android:text="publicGist"
            android:textSize="14sp"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/tvFollowersLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLabelPublicGists"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:text="@string/seguidores"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvfollowersNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/tvPublicGistsNumber"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="8dp"
            android:text="followers"
            android:textSize="14sp"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/tvFolloingLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvFollowersLabel"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:text="@string/seguindo"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvFolloingNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/tvfollowersNumber"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="8dp"
            android:text="following"
            android:textSize="16sp"
            android:textStyle="italic"/>

        <Button
            android:id="@+id/btn_ver_repos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvFolloingNumber"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/ver_reposit_rios"/>

        <TextView
            android:id="@+id/tvLabelGitProfileLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_ver_repos"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:text="@string/perfil_github"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvLinkGitProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLabelGitProfileLink"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:autoLink="web"
            android:text="htmlUrl"
            android:textSize="16sp"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/tvLabelLinkWeb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLinkGitProfile"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:text="Web: "
            android:textSize="16sp"
            android:textStyle="bold"/>


        <TextView
            android:id="@+id/tvLinkBlog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLabelLinkWeb"
            android:layout_marginLeft="8dp"
            android:autoLink="web"
            android:text="blog"
            android:textSize="16sp"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/disconnected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tvFolloingNumber"
            android:layout_marginRight="8dp"
            android:layout_marginTop="20dp"
            android:text="@string/disconectado"
            android:textColor="@color/colorAccent"
            android:textSize="20dp"
            android:textStyle="bold"
            android:visibility="invisible"/>


    </RelativeLayout>

</android.support.v7.widget.CardView>


