<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/jobcomb"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:scaleType="centerCrop"/>

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bem_vindo_jobcomb"
            android:textSize="25dp"
            android:gravity="center"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/a_maneira_perfeita_de_ganhar_experi_ncia"
            android:textSize="15dp"
            android:layout_marginBottom="16dp"/>

        <ImageView
            android:layout_width="350dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:scaleType="centerCrop"
            android:background="@drawable/hack1" />

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Desafio AMBEV"
            android:textSize="24dp" />

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="São Paulo, dezembro de 2017 – A Ambev anunciara na sexta-feira (22), em Florianópolis, na Conferência Mundial de Empresas Juniores 2016 (JEWC 2017),os três finalistas do Desafio Ambev."
            android:textSize="15dp" />

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inscreva_se"
                android:layout_marginTop="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/compartilhe"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

        <View
            android:background="#cac9c9"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <ImageView
            android:layout_width="350dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/fiap"
            android:scaleType="centerCrop"            />

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Desafio FIAP"
            android:textSize="24dp"
            />

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="São Paulo, outubro de 2017 – A FIAP anunciara na sexta-feira (22), em Florianópolis, na Conferência Mundial de AM's 2017."
            android:textSize="15dp" />

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inscreva_se"
                android:layout_marginTop="10dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/compartilhe"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

        <View
            android:background="#cac9c9"
            android:layout_width = "fill_parent"
            android:layout_height="1dip"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <ImageView
            android:layout_width="350dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:scaleType="centerCrop"
            android:background="@drawable/hack2"/>

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Vocês sabem o que são?!?"
            android:textSize="24dp" />

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="Hackathon (palavra-valise inglesa, formada pelos vocábulos to hack, 'fatiar', 'quebrar', 'alterar ou ter acesso a um arquivo ou rede', e marathon, maratona)"
            android:textSize="15dp" />

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Share"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

        <View
            android:background="#cac9c9"
            android:layout_width = "fill_parent"
            android:layout_height="1dip"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>

</ScrollView>


